[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/balls/Ball.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]
radius = 0.2
height = 0.4

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.682353, 0.682353, 0.682353, 1 )
metallic = 0.67
roughness = 0.2

[sub_resource type="SphereShape" id=3]
radius = 0.2

[node name="Ball" type="KinematicBody"]
collision_layer = 4
collision_mask = 31
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
collision_layer = 4
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )
disabled = true

[node name="RemoveBall" type="Timer" parent="."]
one_shot = true

[node name="AddListening" type="Timer" parent="."]

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="RemoveBall" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AddListening" to="." method="_on_AddListening_timeout"]
